отредактированы кнопки быстрого вызова

--- a/index.html
+++ b/index.html
@@ -11,20 +11,30 @@
 </head>
 <body class="body">
     <div class="page">
-        <header class="header">
+        <!-- <header class="header">
             <a href="tel:+375292663571" target="_blank" class="header__link">
                 <img src="./images/phone.png" alt="Телефон" class="header__icon">
             </a>
             <a href="https://viber.click/375292663571" target="_blank" class="header__link">
                 <img src="./images/viber.png" alt="Вайбер" class="header__icon">
             </a>
-        </header>
+        </header> -->
         <main class="main">
             <section class="content">
                 <div class="content__container">
+                    <img src="./images/MTS_Logo_rus_w.png" alt="МТС" class="content__logo-mts">
                     <a href="tel:+375292663571" class="content__container-for-tel">
+                        
                         <p  class="content__tel">+ 375 29 266 35 71</p>
                     </a>
+                    <div class="content__container-for-contact">
+                        <a href="tel:+375292663571" target="_blank" class="content__link">
+                            <img src="./images/phone.png" alt="Телефон" class="content__icon">
+                        </a>
+                        <a href="https://viber.click/375292663571" target="_blank" class="content__link">
+                            <img src="./images/viber.png" alt="Вайбер" class="content__icon">
+                        </a>
+                    </div>
                     <h1 class="content__title">Грузоперевозки с&nbsp;грузчиками и без</h1>
                     <p class="content__price">от 20р/час</p>
                 </div>
