адаптирован раздел cars

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
                     </article>
                 </div>
             </section>
-            <!-- <section class="cars">
+            <section class="cars">
                 <h2 class="cars__title">Автопарк</h2>
                 <div class="cars__container">
                     <img src="./images/auto/auto-char.jpg" alt="Автомобиль характеристики" class="cars__photo cars__photo-char">
                     <img src="./images/auto/auto1.jpg" alt="Автомобиль фото 1" class="cars__photo">
                     <img src="./images/auto/auto2.jpg" alt="Автомобиль фото 2" class="cars__photo">
                 </div>
-            </section> -->
+            </section>
             <!-- <section class="gruzchiki">
                 <h2 class="gruzchiki__title">Грузчики</h2>
                 <div class="gruzchiki__container">
