--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <img src="./images/auto/auto2.jpg" alt="Автомобиль фото 2" class="cars__photo">
                 </div>
             </section>
-            <!-- <section class="gruzchiki">
+            <section class="gruzchiki">
                 <h2 class="gruzchiki__title">Грузчики</h2>
                 <div class="gruzchiki__container">
                     <p class="gruzchiki__text">Наши вежливые грузчики готовы помочь Вам с погрузкой и разгрузкой. Все манипуляции осуществляем бережно, гарантируем сохранность груза</p>
@@ -105,8 +105,8 @@
                         <img src="./images/gruzchiki/gruzchiki6.jpg" alt="Грузчики фото 6" class="slider__photo">
                     </div>
                 </div>
-            </section> -->
-            <!-- <section class="price">
+            </section>
+            <section class="price">
                 <h2 class="price__title">Стоимость услуг</h2>
                 <div class="price__container">
                     <ul class="price__items">
@@ -136,9 +136,9 @@
                         </li>
                     </ul>
                 </div>
-            </section> -->
+            </section>
         </main>
-        <!-- <footer class="footer">
+        <footer class="footer">
             <div class="footer__icons">
                 <a href="tel:+375292663571" target="_blank" class="footer__link">
                     <img src="./images/phone.png" alt="Телефон" class="footer__icon">
@@ -148,11 +148,11 @@
                 </a>
             </div>
             <div class="footer__info">
-                <p class="footer__text">Телефон: + 375 29 266 35 71</p>
-                <p class="footer__text">Адрес: ???</p>
-                <p class="footer__text">Может что-то еще??</p>
+                <p class="footer__text">Тел.: + 375 29 266 35 71</p>
+                <!-- <p class="footer__text">Адрес: ???</p>
+                <p class="footer__text">Может что-то еще??</p> -->
             </div>
-        </footer> -->
+        </footer>
     </div>
     
 </body>
