фавиконка с прозрачным фоном

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <link rel="icon" href="./images/favicon.png" type="image/jpg">
+    <link rel="icon" href="./images/imgonline-com-ua-Transparent-backgr-qUeRgTS8popMQf.png" type="image/x-icon">
     <title>Грузоперевозки Гродно</title>
     <script src="./scripts/script.js" defer></script>
 </head>
