добавлены метатеги keywords и title

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Грузоперевозки по Гродно и Гродненской области. Любые грузы. Перевозки с грузчиками и без. Недорогие грузовые перевозки. Самые дешевые транспортные услуги.">
+    <meta name="keywords" content="Грузотакси, Грузоперевозки в Гродно, грузоперевозки в гродненской области, заказать грузоперевозки Гродно, грузоперевозки, перевоз грузов гродно, грузчики гродно, сайт грузоперевозок.">
     <link rel="stylesheet" href="./index.css">
     <link rel="icon" href="./images/imgonline-com-ua-Transparent-backgr-qUeRgTS8popMQf.png" type="image/x-icon">
-    <title>Грузоперевозки Гродно</title>
+    <title>Грузоперевозки Гродно и Гродненская область</title>
     <script src="./scripts/script.js" defer></script>
 </head>
 <body class="body">
