--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <main class="main">
             <section class="content">
                 <div class="content__container">
-                    <img src="./images/MTS_Logo_rus_w.png" alt="МТС" class="content__logo-mts">
+                    <img src="./images/MTS_Logo_rus_w.png" alt="МТС" title="Иконка МТС" class="content__logo-mts">
                     <a href="tel:+375292663571" class="content__container-for-tel"> 
                         <p  class="content__tel">+ 375 29 266 35 71</p>
                     </a>
                     <div class="content__container-for-contact">
                         <a href="tel:+375292663571" target="_blank" class="content__link">
-                            <img src="./images/phone.png" alt="Телефон" class="content__icon">
+                            <img src="./images/phone.png" alt="Телефон" title="Позвонить" class="content__icon">
                         </a>
                         <a href="https://viber.click/375292663571" target="_blank" class="content__link">
-                            <img src="./images/viber.png" alt="Вайбер" class="content__icon">
+                            <img src="./images/viber.png" alt="Вайбер" title="Написать в VIBER" class="content__icon">
                         </a>
                     </div>
                     <h1 class="content__title">Грузоперевозки с&nbsp;грузчиками и без</h1>
@@ -143,16 +143,14 @@
         <footer class="footer">
             <div class="footer__icons">
                 <a href="tel:+375292663571" target="_blank" class="footer__link">
-                    <img src="./images/phone.png" alt="Телефон" class="footer__icon">
+                    <img src="./images/phone.png" alt="Телефон" title="Нажмите, чтобы позвонить" class="footer__icon">
                 </a>
                 <a href="https://viber.click/375292663571" target="_blank" class="footer__link">
-                    <img src="./images/viber.png" alt="Вайбер" class="footer__icon">
+                    <img src="./images/viber.png" alt="Вайбер" title="Связаться по VIBER" class="footer__icon">
                 </a>
             </div>
             <div class="footer__info">
                 <p class="footer__text">Тел.: + 375 29 266 35 71</p>
-                <!-- <p class="footer__text">Адрес: ???</p>
-                <p class="footer__text">Может что-то еще??</p> -->
             </div>
         </footer>
     </div>
