--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="content__container">
                     <img src="./images/MTS_Logo_rus_w.png" alt="МТС" title="Иконка МТС" class="content__logo-mts">
                     <a href="tel:+375292663571" class="content__container-for-tel"> 
-                        <p  class="content__tel">+ 375 29 266 35 71</p>
+                        <p  class="content__tel">+ 375 33 364 44 42</p>
                     </a>
                     <div class="content__container-for-contact">
                         <a href="tel:+375292663571" target="_blank" class="content__link">
@@ -29,7 +29,6 @@
                         </a>
                     </div>
                     <h1 class="content__title">Грузоперевозки с&nbsp;грузчиками и без</h1>
-                    <p class="content__price">от 20р/час</p>
                 </div>
                 <img src="./images/truck.png" alt="Грузовик" class="content__photo">
             </section>
@@ -115,7 +114,7 @@
                         <li class="price__item">
                             <div class="price__item-container">
                                 <p class="price__item-price">Грузоперевозки по городу</p>
-                                <p class="price__item-price">от 20 р./час</p>
+                                <p class="price__item-price">от 25 р./час</p>
                             </div>
                         </li>
                         <li class="price__item">
@@ -127,7 +126,7 @@
                         <li class="price__item">
                             <div class="price__item-container">
                                 <p class="price__item-price">Грузчик</p>
-                                <p class="price__item-price">от 10 р./час</p>
+                                <p class="price__item-price">от 12 р./час</p>
                             </div>
                         </li>
                         <li class="price__item">
@@ -150,10 +149,32 @@
                 </a>
             </div>
             <div class="footer__info">
-                <p class="footer__text">Тел.: + 375 29 266 35 71</p>
+                <p class="footer__text">Тел.: + 375 33 364 44 42</p>
             </div>
         </footer>
     </div>
-    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZK1HT4RTF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WZK1HT4RTF');
+</script>
+<script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();
+    for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+    k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+ 
+    ym(95620512, "init", {
+         clickmap:true,
+         trackLinks:true,
+         accurateTrackBounce:true,
+         webvisor:true
+    });
+ </script>
+ <noscript><div><img src="https://mc.yandex.ru/watch/95620512" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 </body>
 </html>
